// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListControl should add to list when add button is clicked 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: none;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        1 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          No string
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map {}"
        />
      </div>
      <div
        id="DndDescribedBy-19"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-19"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should remove from list when remove button is clicked 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: none;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 1
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"minimize_collapsed\\": true, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map { \\"string\\": \\"item 1\\" }"
        />
      </div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-1"
          id="1"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 2
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-1"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"minimize_collapsed\\": true, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,1"
          validationkey="1"
          value="Map { \\"string\\": \\"item 2\\" }"
        />
      </div>
      <div
        id="DndDescribedBy-20"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-20"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should remove from list when remove button is clicked 2`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: block;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        1 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
        style="transition: transform 0ms linear;"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="true"
          data-testid="styled-list-item-top-bar-2"
          id="2"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 2
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper css-1pznrxi"
          collapsed="true"
          data-testid="object-control-2"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"minimize_collapsed\\": true, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,2"
          validationkey="2"
          value="Map { \\"string\\": \\"item 2\\" }"
        />
      </div>
      <div
        id="DndDescribedBy-20"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-20"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render empty list 1`] = `
<DocumentFragment>
  <input
    class="classNameWrapper"
    id="forID"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`ListControl should render list with fields with collapse = "false" and default minimize_collapsed ("false") 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: none;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 1
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map { \\"string\\": \\"item 1\\" }"
        />
      </div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-1"
          id="1"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 2
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-1"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,1"
          validationkey="1"
          value="Map { \\"string\\": \\"item 2\\" }"
        />
      </div>
      <div
        id="DndDescribedBy-16"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-16"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render list with fields with collapse = "false" and default minimize_collapsed = "true" 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: none;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 1
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"minimize_collapsed\\": true, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map { \\"string\\": \\"item 1\\" }"
        />
      </div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-1"
          id="1"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 2
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-1"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"minimize_collapsed\\": true, \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,1"
          validationkey="1"
          value="Map { \\"string\\": \\"item 2\\" }"
        />
      </div>
      <div
        id="DndDescribedBy-18"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-18"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render list with fields with default collapse ("true") and minimize_collapsed ("false") 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: block;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="true"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 1
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper css-1pznrxi"
          collapsed="true"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map { \\"string\\": \\"item 1\\" }"
        />
      </div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="true"
          data-testid="styled-list-item-top-bar-1"
          id="1"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          item 2
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper css-1pznrxi"
          collapsed="true"
          data-testid="object-control-1"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"fields\\": List [ Map { \\"label\\": \\"String\\", \\"name\\": \\"string\\", \\"widget\\": \\"string\\" } ] }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,1"
          validationkey="1"
          value="Map { \\"string\\": \\"item 2\\" }"
        />
      </div>
      <div
        id="DndDescribedBy-15"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-15"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render list with fields with default collapse ("true") and minimize_collapsed = "true" 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render list with nested object 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: block;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="true"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          Object
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper css-1pznrxi"
          collapsed="true"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"field\\": Map { \\"name\\": \\"object\\", \\"widget\\": \\"object\\", \\"label\\": \\"Object\\", \\"fields\\": List [ Map { \\"name\\": \\"title\\", \\"widget\\": \\"string\\", \\"label\\": \\"Title\\" } ] } }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map { \\"object\\": Map { \\"title\\": \\"item 1\\" } }"
        />
      </div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="true"
          data-testid="styled-list-item-top-bar-1"
          id="1"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          Object
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper css-1pznrxi"
          collapsed="true"
          data-testid="object-control-1"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"field\\": Map { \\"name\\": \\"object\\", \\"widget\\": \\"object\\", \\"label\\": \\"Object\\", \\"fields\\": List [ Map { \\"name\\": \\"title\\", \\"widget\\": \\"string\\", \\"label\\": \\"Title\\" } ] } }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,1"
          validationkey="1"
          value="Map { \\"object\\": Map { \\"title\\": \\"item 2\\" } }"
        />
      </div>
      <div
        id="DndDescribedBy-0"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-0"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render list with nested object with collapse = false 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 14px 14px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dfdfe3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin: 0 -14px;
  padding: 13px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 1;
}

.emotion-3 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  padding: 4px;
  background-color: transparent;
  color: inherit;
}

.emotion-3:last-of-type {
  margin-right: 4px;
}

.emotion-4 {
  display: inline-block;
  line-height: 0;
  width: 18px;
  height: 18px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 path:not(.no-fill),
.emotion-4 circle:not(.no-fill),
.emotion-4 polygon:not(.no-fill),
.emotion-4 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-4 path.clipped {
  fill: transparent;
}

.emotion-4 svg {
  width: 100%;
  height: 100%;
}

.emotion-5 {
  border: 0;
  border-radius: 5px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 12px;
  font-size: 12px;
  font-weight: bold;
  border-radius: 3px;
}

.emotion-5 svg {
  margin-left: 6px;
}

.emotion-6 {
  display: inline-block;
  line-height: 0;
  width: 12px;
  height: 12px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-6 path:not(.no-fill),
.emotion-6 circle:not(.no-fill),
.emotion-6 polygon:not(.no-fill),
.emotion-6 rect:not(.no-fill) {
  fill: currentColor;
}

.emotion-6 path.clipped {
  fill: transparent;
}

.emotion-6 svg {
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-top: 18px;
}

.emotion-7:first-of-type {
  margin-top: 26px;
}

.emotion-8 {
  display: none;
  border-top: 0;
  color: inherit;
  background-color: #dfdfe3;
  padding: 13px;
  border-radius: 0 0 5px 5px;
}

<div
    class="classNameWrapper emotion-0"
    id="forID"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <button
          class="emotion-3"
          data-testid="expand-button"
        >
          <span
            class="emotion-4"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="5.1231456 6.32943568 2.86323447 8.46718624 11.5186981 17.6172615 20.8632345 8.5123409 18.6923073 6.28428102 11.6090173 13.1859389"
              />
            </svg>
          </span>
        </button>
        2 list
      </div>
      <button
        class="emotion-5"
      >
        editor.editorWidgets.list.add
        <span
          class="emotion-6"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,14 L15,14 L15,14 C14.4477153,14 14,14.4477153 14,15 L14,19 L14,19 C14,19.5522847 13.5522847,20 13,20 L11,20 L11,20 C10.4477153,20 10,19.5522847 10,19 L10,15 L10,15 C10,14.4477153 9.55228475,14 9,14 L5,14 L5,14 C4.44771525,14 4,13.5522847 4,13 L4,11 L4,11 C4,10.4477153 4.44771525,10 5,10 L9,10 L9,10 C9.55228475,10 10,9.55228475 10,9 L10,5 L10,5 C10,4.44771525 10.4477153,4 11,4 L13,4 L13,4 C13.5522847,4 14,4.44771525 14,5 L14,9 L14,9 C14,9.55228475 14.4477153,10 15,10 L19,10 L19,10 C19.5522847,10 20,10.4477153 20,11 L20,13 L20,13 C20,13.5522847 19.5522847,14 19,14 Z"
              id="icon-add@2x-a"
            />
          </svg>
        </span>
      </button>
    </div>
    <div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-0"
          id="0"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          Object
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-0"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"field\\": Map { \\"name\\": \\"object\\", \\"widget\\": \\"object\\", \\"label\\": \\"Object\\", \\"fields\\": List [ Map { \\"name\\": \\"title\\", \\"widget\\": \\"string\\", \\"label\\": \\"Title\\" } ] } }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,0"
          validationkey="0"
          value="Map { \\"object\\": Map { \\"title\\": \\"item 1\\" } }"
        />
      </div>
      <div
        class="emotion-7"
      >
        <mock-list-item-top-bar
          classname="css-13mb0t2"
          collapsed="false"
          data-testid="styled-list-item-top-bar-1"
          id="1"
        >
          <button>
            Remove
          </button>
        </mock-list-item-top-bar>
        <div
          class="emotion-8"
        >
          Object
        </div>
        <mock-object-control
          classnamewrapper="classNameWrapper"
          collapsed="false"
          data-testid="object-control-1"
          field="Map { \\"name\\": \\"list\\", \\"label\\": \\"List\\", \\"collapsed\\": false, \\"field\\": Map { \\"name\\": \\"object\\", \\"widget\\": \\"object\\", \\"label\\": \\"Object\\", \\"fields\\": List [ Map { \\"name\\": \\"title\\", \\"widget\\": \\"string\\", \\"label\\": \\"Title\\" } ] } }"
          fieldserrors="Map {}"
          forlist="true"
          parentids="forID,1"
          validationkey="1"
          value="Map { \\"object\\": Map { \\"title\\": \\"item 2\\" } }"
        />
      </div>
      <div
        id="DndDescribedBy-1"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-1"
        role="status"
        style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListControl should render list with string array 1`] = `
<DocumentFragment>
  <input
    class="classNameWrapper"
    id="forID"
    type="text"
    value="item 1, item 2"
  />
</DocumentFragment>
`;
